@@ -2,3 +2,4 @@
 .piolibdeps
 .vscode/c_cpp_properties.json
 .vscode/launch.json
+.vscode/.browse.c_cpp.db*
