@@ -87,7 +87,7 @@ bool IotsaHelloMod::putHandler(const char *path, const JsonVariant& request, Jso
 void IotsaHelloMod::serverSetup() {
   // Setup the web server hooks for this module.
   server.on("/hello", std::bind(&IotsaHelloMod::handler, this));
-  apiSetup("/api/hello", true, true);
+  api.setup("/api/hello", true, true);
 }
 
 String IotsaHelloMod::info() {
