@@ -1,5 +1,5 @@
 name=iotsa
-version=1.2.1
+version=1.4
 author=Jack Jansen <Jack.Jansen@cwi.nl>
 maintainer=Jack Jansen <Jack.Jansen@cwi.nl>
 sentence=An Internet Of Things Server Architecture for ESP8266.
