@@ -10,7 +10,6 @@ public:
   void serverSetup();
   void loop();
   String info();
-  using IotsaBaseMod::needsAuthentication;
 protected:
   bool getHandler(const char *path, JsonObject& reply);
   bool putHandler(const char *path, const JsonVariant& request, JsonObject& reply);
