@@ -32,7 +32,6 @@ public:
   bool localIsPM();
 
   String ntpServer;
-  using IotsaBaseMod::needsAuthentication;
 protected:
   bool getHandler(const char *path, JsonObject& reply);
   bool putHandler(const char *path, const JsonVariant& request, JsonObject& reply);
