@@ -10,8 +10,10 @@ public:
   void serverSetup();
   void loop();
   String info();
-  bool needsAuthentication(const char *right=NULL);
+  bool allows(const char *right=NULL);
+  bool allows(const char *obj, const char *verb) { return allows("api");}
   bool getHandler(const char *path, JsonObject& reply);
+  bool putHandler(const char *path, const JsonVariant& request, JsonObject& reply);
   bool postHandler(const char *path, const JsonVariant& request, JsonObject& reply);
 protected:
   void configLoad();
