@@ -5,12 +5,11 @@
 
 class IotsaWifiMod : public IotsaApiMod {
 public:
-  IotsaWifiMod(IotsaApplication &_app, IotsaAuthMod *_auth=NULL) : IotsaApiMod(_app, _auth, true) {}
+  IotsaWifiMod(IotsaApplication &_app, IotsaAuthenticationProvider *_auth=NULL) : IotsaApiMod(_app, _auth, true) {}
 	void setup();
 	void serverSetup();
 	void loop();
   String info();
-  using IotsaBaseMod::needsAuthentication;
 protected:
   bool getHandler(const char *path, JsonObject& reply);
   bool putHandler(const char *path, const JsonVariant& request, JsonObject& reply);
